--- a/.cproject
+++ b/.cproject
@@ -73,6 +73,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.base.1859575861" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.base">
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.2111531711" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/Users/andreyshspb/omnetpp-5.7/samples/trafficengineering/include"/>
+									<listOptionValue builtIn="false" value="/Users/andreyshspb/omnetpp-5.7/samples/inet/src"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1503469045" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
