add dynamic udp application creation

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -19,18 +19,9 @@ network = SimpleNetwork
 **.server.app[0].destPort = 100
 **.server.app[0].messageLength = 500 bytes
 **.server.app[0].sendInterval = 0.1s
-**.server.app[0].destAddresses = "225.0.0.2"  # "225.0.0.1" for static multicast group
+**.server.app[0].destAddresses = "225.0.0.1"
 **.server.app[0].joinLocalMulticastGroups = true
 
 
 [Config FatTreeNetwork]
 network = FatTreeNetwork
-
-**.server5.numApps = 1
-**.server5.app[*].typename = "UdpBasicApp"
-**.server5.app[0].localPort = 100
-**.server5.app[0].destPort = 100
-**.server5.app[0].messageLength = 500 bytes
-**.server5.app[0].sendInterval = 0.1s
-**.server5.app[0].destAddresses = "225.0.0.2"
-**.server5.app[0].joinLocalMulticastGroups = true
